[TOOLS-4341] Add errMsgLoadSchemaFailed

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -264,6 +264,7 @@ errMsgImportLocalScriptFailed=Import script from local failed.
 errMsgImportRemoteScriptFailed=Import script from remote server failed.
 errMsgInvalidCronPatten=Invalid cron pattern
 errMsgInvalidStartTime=Invalid Start time setting
+errMsgLoadSchemaFailed=Unable to load schema(s) information
 errMsgNoCSV=There is no CSV file to be imported.
 errMsgNoExportScript=Please select a destination to export script.
 errMsgProxySettingError=Set SSH proxy error.
