--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -263,6 +263,7 @@ errMsgImportLocalScriptFailed=\uB0B4 PC\uB85C\uBD80\uD130 \uC2A4\uD06C\uB9BD\uD2
 errMsgImportRemoteScriptFailed=\uC6D0\uACA9 \uC11C\uBC84\uB85C\uBD80\uD130 \uC2A4\uD06C\uB9BD\uD2B8 \uAC00\uC838\uC624\uAE30\uB97C \uC2E4\uD328\uD588\uC2B5\uB2C8\uB2E4.
 errMsgInvalidCronPatten=Cron \uAD6C\uBB38\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 errMsgInvalidStartTime=\uC2DC\uC791 \uC2DC\uAC04 \uC124\uC815\uC774 \uC62C\uBC14\uB974\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
+errMsgLoadSchemaFailed=\uC2A4\uD0A4\uB9C8 \uC815\uBCF4\uB97C \uAC00\uC838\uC62C \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 errMsgNoCSV=\uC785\uB825\uB420 CSV \uD30C\uC77C\uC774 \uC124\uC815\uB418\uC9C0 \uC54A\uC558\uC2B5\uB2C8\uB2E4.
 errMsgNoExportScript=\uC2A4\uD06C\uB9BD\uD2B8 \uB0B4\uBCF4\uB0B4\uAE30\uD560 \uB300\uC0C1\uC744 \uC120\uD0DD\uD574\uC8FC\uC138\uC694.
 errMsgProxySettingError=SSH \uD504\uB85D\uC2DC \uC124\uC815 \uC624\uB958 \uC785\uB2C8\uB2E4.
