[TOOLS-4345] [CMT] Supports for changing to Nullable when LOB typed columns are set to Not Null

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -519,6 +519,7 @@ msgInvalidSQL=Invalid SQL input.
 msgIsUseCachedCatalog=Do you want to use the cached catalog?
 msgIsUseNewerScriptCatalog=The catalog information of current script is newer than the cached catalog.\r\nDo you want to udpate the cache?
 msgIsUseScriptCatalog=Do you want to use the catalog information of current script?
+msgLobInformation=CUBRID does not allow to set to "Not Null" for LOB typed columns. (for now)\nIf there are LOB typed columns that Not Null is set in source database, It will be changed to nullable in the target.
 msgLowerCaseWarning=All of the table/column/view/serial names will be converted to lowercase in target CUBRID database.
 msgMappingOverride=Current configuration will be overridden\!\r\nDo you want to continue?
 msgNoIndexColumn=[Table\:"{0}"]Index "{1}" should have at least one column.
@@ -678,6 +679,7 @@ titleError=Error
 titleExportScript=Export Migration Script
 titleGroupSettingDialog=Group Settings
 titleImportScript=Import Migration Script
+titleLobInformation=LOB Information
 titleNewScript=New Script
 titlePerformanceSettings=Settings
 titleRenameSchema=Schema not found
