[TOOLS-4343] [CMT] Supports the function to select schema's entities at once on Navigator

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -422,6 +422,8 @@ menuOpenReport=&Open Report
 menuOpenWithWizard=Open with &wizard
 menuRefresh=&Refresh
 menuTopElment=Top Element
+menuSelectAll=Select all entities of [{0}]
+menuDeselectAll=Deselect all entities of [{0}]
 msgAccomplished=Accomplished
 msgCSVFilesList=CSV Files List
 msgCUBRIDToolsSiteURL=http\://www.cubrid.org/wiki_tools
