--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -421,6 +421,8 @@ menuOpenReport=\uBCF4\uACE0\uC11C \uC5F4\uAE30(&O)
 menuOpenWithWizard=\uB9C8\uBC95\uC0AC \uC2DC\uC791\uD558\uAE30(&W)
 menuRefresh=\uC0C8\uB85C\uACE0\uCE68(&R)
 menuTopElment=\uCD5C\uC0C1\uC704 \uC694\uC18C
+menuSelectAll=\uC120\uD0DD\uB41C [{0}]\uC758 \uAC1D\uCCB4 \uBAA8\uB450 \uC120\uD0DD
+menuDeselectAll=\uC120\uD0DD\uB41C [{0}]\uC758 \uAC1D\uCCB4 \uBAA8\uB450 \uD574\uC81C
 msgAccomplished=\uC644\uB8CC
 msgCSVFilesList=CSV \uD30C\uC77C \uBAA9\uB85D
 msgCUBRIDToolsSiteURL=http\://www.cubrid.org/wiki_tools
