--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -518,6 +518,7 @@ msgInvalidSQL=SQL \uC785\uB825\uC774 \uC798\uBABB\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 msgIsUseCachedCatalog=\uAE30\uC874\uC5D0 \uC218\uC9D1\uB41C \uC2A4\uD0A4\uB9C8 \uC815\uBCF4\uB97C \uC0AC\uC6A9\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 msgIsUseNewerScriptCatalog=\uC2A4\uD06C\uB9BD\uD2B8\uC758 \uC2A4\uD0A4\uB9C8 \uC815\uBCF4\uAC00 \uCE90\uC2DC\uB41C \uC2A4\uD0A4\uB9C8 \uC815\uBCF4\uC5D0 \uBE44\uD574 \uCD5C\uC2E0 \uC785\uB2C8\uB2E4.\r\n\uC2A4\uD06C\uB9BD\uD2B8\uC5D0 \uC788\uB294 \uC2A4\uD0A4\uB9C8 \uC815\uBCF4\uB97C \uAC31\uC2E0\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 msgIsUseScriptCatalog=\uD604\uC7AC \uB9C8\uC774\uADF8\uB808\uC774\uC158 \uC2A4\uD06C\uB9BD\uD2B8\uC5D0 \uC800\uC7A5\uB41C \uC2A4\uD0A4\uB9C8 \uC815\uBCF4\uB97C \uC0AC\uC6A9\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
+msgLobInformation=CUBRID\uB294 LOB \uB370\uC774\uD130 \uD0C0\uC785\uC5D0 \uB300\uD574 Not Null\uC744 \uD5C8\uC6A9\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.\nLOB \uB370\uC774\uD130 \uD0C0\uC785 \uC911 Not Null\uC778 \uCEEC\uB7FC\uC758 \uC18D\uC131\uC744 Nullable\uB85C \uBCC0\uACBD\uD569\uB2C8\uB2E4.
 msgLowerCaseWarning=\uB300\uC0C1 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4\uC5D0\uC11C \uBAA8\uB4E0 \uD14C\uC774\uBE14/\uCEEC\uB7FC/\uBDF0/\uC2DC\uB9AC\uC5BC \uC774\uB984\uC774 \uC18C\uBB38\uC790\uB85C \uBCC0\uACBD\uB418\uC5C8\uC2B5\uB2C8\uB2E4.
 msgMappingOverride=\uD604\uC7AC \uB9E4\uD551 \uC124\uC815\uC774 \uC9C0\uC815\uD558\uC2E0 \uD30C\uC77C \uC815\uBCF4\uB85C \uBCC0\uACBD\uB429\uB2C8\uB2E4.\r\n\uACC4\uC18D\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 msgNoIndexColumn=[\uD14C\uC774\uBE14\:"{0}"] "{1}" \uC778\uB371\uC2A4\uB294 \uCD5C\uC18C\uD55C 1\uAC1C\uC758 \uCEEC\uB7FC\uC744 \uAC00\uC9C0\uACE0 \uC788\uC5B4\uC57C \uD569\uB2C8\uB2E4.
@@ -677,6 +678,7 @@ titleError=\uC624\uB958
 titleExportScript=\uB9C8\uC774\uADF8\uB808\uC774\uC158 \uC2A4\uD06C\uB9BD\uD2B8 \uB0B4\uBCF4\uB0B4\uAE30
 titleGroupSettingDialog=\uADF8\uB8F9 \uC124\uC815
 titleImportScript=\uB9C8\uC774\uADF8\uB808\uC774\uC158 \uC2A4\uD06C\uB9BD\uD2B8 \uAC00\uC838\uC624\uAE30
+titleLobInformation=LOB Information
 titleNewScript=\uC2A4\uD06C\uB9BD\uD2B8 \uBCF5\uC0AC\uD558\uAE30
 titlePerformanceSettings=\uC124\uC815
 titleRenameSchema=\uC2A4\uD0A4\uB9C8\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
