[TOOLS-4411] Datatype Mapping & Data Export
http://jira.cubrid.org/browse/TOOLS-4411

- datatype mapping adjustment
- data export handler
- UI
- configuration

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -107,6 +107,8 @@ btnSrcOnlineOracleDB=Online Oracle database
 btnSrcOnlineOracleDBDes=Connecting to Oracle via JDBC.
 btnSrcOnlineMariaDBDB=Online MariaDB database
 btnSrcOnlineMariaDBDBDes=Connecting to MariaDB via JDBC.
+btnSrcOnlineInformixDB=Online Informix database
+btnSrcOnlineInformixDBDes=Connecting to Informix via JDBC.
 btnSrcSQLFiles=Local SQL script files
 btnSrcSQLFilesDes=Importing SQL files to execute.
 btnStartMigrationByHistory=Restart migration...
@@ -595,6 +597,7 @@ objectMapPageTitle=Database Object Mapping
 onlineCUBRIDCommitCount=Default Commit Count\:
 openConfActionTitle=Preferences
 oracle2CUBRID=Oracle To CUBRID
+informix2CUBRID=Informix To CUBRID
 otherSettings=Other Settings
 prefTitleGeneral=General
 productName=CUBRID Migration Toolkit
