split schema file by object

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -13,6 +13,7 @@ auoCheckUpdate=Automatically &find new updates and notify me during application 
 btnAdd=&Add...
 btnAddFromHDFS=Add from HDFS
 btnAddUserSchema=Add User Schema
+btnSplitSchema=Split schema file
 btnAdvanced=JDBC Advanced...
 btnAdvancedSettings=Advanced Settings...
 btnAgreed=I agree.
@@ -206,6 +207,12 @@ confrimExportViews=Export Views \:
 confrimIndex=Index \:
 confrimSQLTables=SQL Tables \: 
 confrimSchema=Schema \: 
+confrimTable=Table \: 
+confrimView=View \: 
+confrimPk=PK \: 
+confrimFk=FK \: 
+confrimSerial=Serial \: 
+confrimUpdateStatistic=UpdateStatistic \: 
 cubridNewInfoEditorName=CUBRID Information
 dBConnectCompositeBtnBrowse=Bro&wse...
 dBConnectCompositeErrDbSys=Database system type is not valid\!
