--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -13,6 +13,7 @@ auoCheckUpdate=\uC790\uB3D9\uC73C\uB85C \uC0C8\uB85C\uC6B4 \uC5C5\uB370\uC774\uD
 btnAdd=\uCD94\uAC00(&A)...
 btnAddFromHDFS=HDFS\uB85C\uBD80\uD130 \uCD94\uAC00
 btnAddUserSchema=user schema \ucd94\uac00
+btnSplitSchema=\uC2A4\uD0A4\uB9C8 \uD30C\uC77C \uBD84\uB9AC
 btnAdvanced=JDBC \uACE0\uAE09 \uC124\uC815...
 btnAdvancedSettings=\uACE0\uAE09 \uC131\uB2A5 \uC124\uC815...
 btnAgreed=\uB3D9\uC758 \uD568
@@ -201,6 +202,12 @@ confrimExportViews=\uCD94\uCD9C\uB420 \uBDF0 \:
 confrimIndex=\uC778\uB371\uC2A4 \:
 confrimSQLTables=\uCD94\uCD9C\uB420 SQL \uB370\uC774\uD130 \:
 confrimSchema=\uC2A4\uD0A4\uB9C8 \:
+confrimTable=\uD14C\uC774\uBE14 \: 
+confrimView=\uBDF0 \: 
+confrimPk=\uAE30\uBCF8\uD0A4 \: 
+confrimFk=\uC678\uB798\uD0A4 \: 
+confrimSerial=\uC2DC\uB9AC\uC5BC \: 
+confrimUpdateStatistic=UpdateStatistic \:   
 cubridNewInfoEditorName=CUBRID \uC18C\uC2DD
 dBConnectCompositeBtnBrowse=\uCC3E\uC544\uBCF4\uAE30...
 dBConnectCompositeErrDbSys=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC885\uB958 \uAC12\uC774 \uC720\uD6A8\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
