--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_tr_TR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_tr_TR.properties
@@ -12,6 +12,8 @@ allTargetColumns=Not PK Target Columns
 auoCheckUpdate=Automatically &find new updates and notify me during application startup
 btnAdd=&Ekle...
 btnAddFromHDFS=Add from HDFS
+btnAddUserSchema=Add User Schema
+btnSplitSchema=Split schema file
 btnAdvanced=Advanced...
 btnAdvancedSettings=Advanced Settings...
 btnAgreed=Kabul Ediyorum.
@@ -200,6 +202,12 @@ confrimExportViews=G\u00F6r\u00FCnt\u00FCleri D\u0131\u015Fa Aktarma \:
 confrimIndex=\u0130ndeks \:
 confrimSQLTables=SQL Tablolar\u0131 \: 
 confrimSchema=\u015Eema \: 
+confrimTable=Table \: 
+confrimView=View \: 
+confrimPk=PK \: 
+confrimFk=FK \: 
+confrimSerial=Serial \: 
+confrimUpdateStatistic=UpdateStatistic \: 
 cubridNewInfoEditorName=CUBRID Bilgi
 dBConnectCompositeBtnBrowse=&G\u00F6zat...
 dBConnectCompositeErrDbSys=Veritaban\u0131 sistem t\u00FCr\u00FC ge\u00E7erli de\u011Fil\!
