--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_vi_VN.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_vi_VN.properties
@@ -12,6 +12,8 @@ allTargetColumns=Not PK Target Columns
 auoCheckUpdate=Automatically &find new updates and notify me during application startup
 btnAdd=Th\u00EAm (&A)...
 btnAddFromHDFS=Add from HDFS
+btnAddUserSchema=Add User Schema
+btnSplitSchema=Split schema file
 btnAdvanced=Advanced...
 btnAdvancedSettings=Advanced Settings...
 btnAgreed=T\u00F4i \u0111\u00F4\u0300ng y\u0301.
@@ -200,6 +202,12 @@ confrimExportViews=Export Views \:
 confrimIndex=Index \:
 confrimSQLTables=SQL Tables \: 
 confrimSchema=Schema \: 
+confrimTable=Table \: 
+confrimView=View \: 
+confrimPk=PK \: 
+confrimFk=FK \: 
+confrimSerial=Serial \: 
+confrimUpdateStatistic=UpdateStatistic \: 
 cubridNewInfoEditorName=Th\u00F4ng tin CUBRID
 dBConnectCompositeBtnBrowse=Duy\u00EA\u0323t qua...
 dBConnectCompositeErrDbSys=Ki\u00EA\u0309u h\u00EA\u0323 th\u00F4\u0301ng c\u01A1 s\u01A1\u0309 d\u01B0\u0303 li\u00EA\u0323u kh\u00F4ng h\u01A1\u0323p l\u00EA\u0323\!
