--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
@@ -12,6 +12,8 @@ allTargetColumns=\u975E\u4E3B\u952E\u76EE\u6807\u5217
 auoCheckUpdate=\u81EA\u52A8\u67E5\u627E\u66F4\u65B0\u5E76\u5728\u542F\u52A8\u7684\u65F6\u5019\u901A\u77E5
 btnAdd=\u65B0\u589E(&A)...
 btnAddFromHDFS=\u4ECEHDFS\u6DFB\u52A0
+btnAddUserSchema=\u6DFB\u52A0\u7528\u6237\u6A21\u5F0F
+btnSplitSchema=\u88C2\u5F00\u56FE\u5F0F\u5F52\u6863
 btnAdvanced=\u9AD8\u7EA7...
 btnAdvancedSettings=\u9AD8\u7EA7\u8BBE\u7F6E
 btnAgreed=\u540C\u610F.
@@ -200,6 +202,12 @@ confrimExportViews=\u5BFC\u51FA\u89C6\u56FE \:
 confrimIndex=Index \:
 confrimSQLTables=\u5BFC\u51FASQL \: 
 confrimSchema=Schema \: 
+confrimTable=Table \: 
+confrimView=View \: 
+confrimPk=PK \: 
+confrimFk=FK \: 
+confrimSerial=Serial \: 
+confrimUpdateStatistic=UpdateStatistic \: 
 cubridNewInfoEditorName=CUBRID\u4FE1\u606F
 dBConnectCompositeBtnBrowse=\u6D4F\u89C8(&W)...
 dBConnectCompositeErrDbSys=\u6570\u636E\u5E93\u7CFB\u7EDF\u7C7B\u578B\u65E0\u6548\!
