--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
@@ -479,6 +479,7 @@ msgErrEmptyMax=\u6700\u5927\u503C\u4E0D\u80FD\u4E3A\u7A7A.
 msgErrEmptyMin=\u6700\u5C0F\u503C\u4E0D\u80FD\u4E3A\u7A7A.
 msgErrEmptyPartition=[\u8868\:"{0}"]\u8868\u5206\u533A\u7684DDL\u4E0D\u80FD\u4E3A\u7A7A.
 msgErrEmptyRefTable=[\u8868\:"{0}"]\u5916\u952E"{1}"\u5F15\u7528\u8868\u4E0D\u80FD\u4E3A\u7A7A.
+msgErrEmptySchemaCheckbox=\u8ACB\u81F3\u5C11\u9078\u64C7\u4E00\u500B\u67B6\u69CB.
 msgErrEmptyScriptName=\u8FC1\u79FB\u811A\u672C\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A\u3002
 msgErrEmptySeparator=\u5206\u9694\u7B26\u4E0D\u80FD\u4E3A\u7A7A
 msgErrEmptyStartValue=\u8D77\u59CB\u503C\u4E0D\u80FD\u4E3A\u7A7A.
