--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -485,6 +485,7 @@ msgErrEmptyMax=\uCD5C\uB300\uAC12\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 msgErrEmptyMin=\uCD5C\uC18C\uAC12\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 msgErrEmptyPartition=[\uD14C\uC774\uBE14\:"{0}"]\uD14C\uC774\uBE14 \uD30C\uD2F0\uC158 DDL\uC774 \uBE44\uC5B4\uC788\uC2B5\uB2C8\uB2E4.
 msgErrEmptyRefTable=[\uD14C\uC774\uBE14\:"{0}"]\uCC38\uC870 \uD14C\uC774\uBE14 \uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694 "{1}".
+msgErrEmptySchemaCheckbox=\uD558\uB098 \uC774\uC0C1\uC758 \uC2A4\uD0A4\uB9C8\uB97C \uC120\uD0DD\uD558\uC138\uC694.
 msgErrEmptySchemaName=\ub300\uc0c1 \uc2a4\ud0a4\ub9c8 \uc774\ub984\uc740 \ubc18\ub4dc\uc2dc \uc788\uc5b4\uc57c \ud569\ub2c8\ub2e4\u002e
 msgErrEmptyScriptName=\uB9C8\uC774\uADF8\uB808\uC774\uC158 \uC2A4\uD06C\uB9BD\uD2B8 \uC774\uB984\uC744 \uC785\uB825\uD574\uC8FC\uC138\uC694.
 msgErrEmptySeparator=\uAD6C\uBD84\uC790\uB97C \uC785\uB825\uD574\uC8FC\uC138\uC694.
