--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_vi_VN.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_vi_VN.properties
@@ -479,6 +479,7 @@ msgErrEmptyMax=Max value can't be empty.
 msgErrEmptyMin=Min value can't be empty.
 msgErrEmptyPartition=Table partition DDL can't be empty.
 msgErrEmptyRefTable=Reference table name can't be empty.
+msgErrEmptySchemaCheckbox=Please select at least one schema.
 msgErrEmptyScriptName=Migration script name can't be empty.
 msgErrEmptySeparator=The separator can't be empty.
 msgErrEmptyStartValue=Start value can't be empty.
