add KR,TR,VN,CN messages properties

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -101,6 +101,10 @@ btnSrcMySQLDumpDB=\uB85C\uCEEC MYSQL XML dump \uD30C\uC77C
 btnSrcMySQLDumpDBDes="mysqldump --xml"\uB85C \uB0B4\uB824 \uBC1B\uC740 XML \uD30C\uC77C\uC744 \uC774\uC6A9\uD574\uC11C \uBE60\uB974\uAC8C \uB9C8\uC774\uADF8\uB808\uC774\uC158 \uD569\uB2C8\uB2E4.
 btnSrcOnlineCUBRIDDB=\uC628\uB77C\uC778 CUBRID \uB370\uC774\uD130\uBCA0\uC774\uC2A4
 btnSrcOnlineCUBRIDDBDes=JDBC \uC5F0\uACB0\uB85C CUBRID \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
+btnSrcOnlineInformixDB=\uC628\uB77C\uC778 Informix \uB370\uC774\uD130\uBCA0\uC774\uC2A4
+btnSrcOnlineInformixDBDes=JDBC \uC5F0\uACB0\uB85C Informix \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
+btnSrcOnlineMariaDBDB=\uC628\uB77C\uC778 MariaDB \uB370\uC774\uD130\uBCA0\uC774\uC2A4
+btnSrcOnlineMariaDBDBDes=JDBC \uC5F0\uACB0\uB85C MariaDB \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
 btnSrcOnlineMSSQLDB=\uC628\uB77C\uC778 MSSQL \uB370\uC774\uD130\uBCA0\uC774\uC2A4
 btnSrcOnlineMSSQLDBDes=JDBC \uC5F0\uACB0\uB85C MSSQL \uC6D0\uBCF8 \uC2A4\uD0A4\uB9C8 \uBC0F \uB370\uC774\uD130\uB97C \uAC00\uC838\uC635\uB2C8\uB2E4. \uB124\uD2B8\uC6CC\uD06C \uBC0F \uC6D0\uBCF8 \uC11C\uBC84\uC758 \uC0C1\uD0DC\uC5D0 \uB530\uB77C \uC131\uB2A5\uC758 \uC601\uD5A5\uC744 \uBC1B\uC2B5\uB2C8\uB2E4.
 btnSrcOnlineMySQLDB=\uC628\uB77C\uC778 MySQL \uB370\uC774\uD130\uBCA0\uC774\uC2A4
@@ -307,6 +311,11 @@ infoGrpUnparsedTimestamp0="1970-01-02 01\:00\:00.000"
 infoGrpUnparsedTimestampNull=NULL
 infoGrpUnparsedTimestampOther=\uB300\uCCB4 \uAC12
 infoImportScriptSuccess=\uC2A4\uD06C\uB9BD\uD2B8 \uAC00\uC838\uC624\uAE30\uB97C \uC644\uB8CC\uD558\uC600\uC2B5\uB2C8\uB2E4.
+infoMariaDBGrpUnparsedChar=MariaDB \uBB38\uC790\uC5F4\uC5D0 \uD3EC\uD568\uB41C 0x0000 \uBB38\uC790\uC5D0 \uB300\uD55C \uC0C8\uB85C\uC6B4 \uAC12\uC73C\uB85C \uB300\uCCB4
+infoMariaDBGrpUnparsedDate=\uBD84\uC11D\uD560 \uC218 \uC5C6\uB294 MariaDB\uB97C \uC0C8\uB85C\uC6B4 \uAC12\uC73C\uB85C \uB300\uCCB4 (\uC608\: 0000-00-00)
+infoMariaDBGrpUnparsedTime=\uBD84\uC11D\uD560 \uC218 \uC5C6\uB294 MariaDB\uB97C \uC0C8\uB85C\uC6B4 \uAC12\uC73C\uB85C \uB300\uCCB4 (\uC608\\: -838\\:59\\:59)
+infoMariaDBGrpUnparsedTimestamp=\uBD84\uC11D\uD560 \uC218 \uC5C6\uB294 MariaDB DATETIME\uC744 \uC0C8\uB85C\uC6B4 \uAC12\uC73C\uB85C \uB300\uCCB4 (\uC608\: 0000-00-00 00\:00\:00)
+informix2CUBRID=Informix\uC5D0\uC11C CUBRID
 jdbcPatternTitle=JDBC URL
 labelGroupName=\uADF8\uB8F9 \uC774\uB984
 labelManagerGroups=\uADF8\uB8F9 \uC120\uD0DD\uACFC \uC815\uB82C
@@ -418,6 +427,7 @@ lblViewStatement=\uAD6C\uBB38\:
 lblXMLFileCharset=XML \uD30C\uC77C \uBB38\uC790\uC9D1\uD569\:
 lblXMLFilePath=XML \uD30C\uC77C \uACBD\uB85C\:
 lblXMLFileTimezone=\uC2DC\uAC04\uB300 \:
+mariadbToCubrid=MariaDB\uC5D0\uC11C CUBRID
 maxImportThreadCountPerTable=Import Thread Count Per Table\:
 maximizeWindowOnStartUp=\uC708\uB3C4\uC6B0 \uCD5C\uB300 \uD06C\uAE30\uB85C \uBCF4\uAE30
 menuDelete=\uC0AD\uC81C(&D)
