--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_tr_TR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_tr_TR.properties
@@ -101,6 +101,10 @@ btnSrcMySQLDumpDB=Local MYSQL XML dump file
 btnSrcMySQLDumpDBDes=A XML file was created by mysqldump --xml command.
 btnSrcOnlineCUBRIDDB=Online CUBRID database
 btnSrcOnlineCUBRIDDBDes=An online CUBRID database.
+btnSrcOnlineInformixDB=Online Informix database
+btnSrcOnlineInformixDBDes=Connecting to Informix via JDBC.
+btnSrcOnlineMariaDBDB=Online MariaDB database
+btnSrcOnlineMariaDBDBDes=Connecting to MariaDB via JDBC.
 btnSrcOnlineMSSQLDB=Online MSSQL
 btnSrcOnlineMSSQLDBDes=An online Microsoft SQL Server.
 btnSrcOnlineMySQLDB=Online MySQL database
@@ -306,6 +310,11 @@ infoGrpUnparsedTimestamp0="1970-01-02 01\:00\:00.000"
 infoGrpUnparsedTimestampNull=NULL
 infoGrpUnparsedTimestampOther=\u0130le de\u011Fi\u015Ftirildi\:
 infoImportScriptSuccess=Import script successfully.
+infoMariaDBGrpUnparsedChar=Dizedeki mariadb karakteri 0x0000 için yeni de\u011Ferle de\u011Fi\u015Ftirin
+infoMariaDBGrpUnparsedDate=Ayr\u0131\u015Ft\u0131r\u0131lamayan mariadb tarihi için yeni de\u011Ferle de\u011Fi\u015Ftirin(ör\: 0000-00-00)
+infoMariaDBGrpUnparsedTime=Ayr\u0131\u015Ft\u0131r\u0131lamayan mariadb tarihi için yeni de\u011Ferle de\u011Fi\u015Ftirin(ör\: -838\:59\:59)
+infoMariaDBGrpUnparsedTimestamp=Ayr\u0131\u015Ft\u0131r\u0131lamayan mariadb zaman damgas\u0131 için yeni de\u011Ferle de\u011Fi\u015Ftirin(ör\\: 0000-00-00 00\\:00\\:00)
+informix2CUBRID=Informix dan CUBRID
 jdbcPatternTitle=JDBC URL
 labelGroupName=Gurup Ad\u0131\:
 labelManagerGroups=Se\u00E7 ve guruplar\u0131 ay\u0131r.
@@ -417,6 +426,7 @@ lblViewStatement=Statement\:
 lblXMLFileCharset=XML dpsya karakterseti\:
 lblXMLFilePath=XML dosya path\:
 lblXMLFileTimezone=&Zaman Dilimi
+mariadbToCubrid=MariaDB dan CUBRID
 maxImportThreadCountPerTable=Import Thread Count Per Table\:
 maximizeWindowOnStartUp=Pencereyi maksimize g\u00F6ster
 menuDelete=&Delete
