[TOOLS-4467] Add Informix, mariadb message properties (#87)
http://jira.cubrid.org/browse/TOOLS-4467

Add Korean, Turkish, Vietnamese, Chinese message properties to Infomix, Mariadb.

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_vi_VN.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_vi_VN.properties
@@ -99,6 +99,10 @@ btnSrcMySQLDumpDB=Local MYSQL XML dump file
 btnSrcMySQLDumpDBDes=A XML file was created by mysqldump --xml command.
 btnSrcOnlineCUBRIDDB=Online CUBRID database
 btnSrcOnlineCUBRIDDBDes=An online CUBRID database.
+btnSrcOnlineInformixDB=Online Informix database
+btnSrcOnlineInformixDBDes=Connecting to Informix via JDBC.
+btnSrcOnlineMariaDBDB=Online MariaDB database
+btnSrcOnlineMariaDBDBDes=Connecting to MariaDB via JDBC.
 btnSrcOnlineMSSQLDB=Online MSSQL
 btnSrcOnlineMSSQLDBDes=An online Microsoft SQL Server.
 btnSrcOnlineMySQLDB=Online MySQL database
@@ -298,6 +302,11 @@ infoGrpUnparsedTimestamp0="1970-01-02 01\:00\:00.000"
 infoGrpUnparsedTimestampNull=NULL
 infoGrpUnparsedTimestampOther=Thay th\u00EA\u0301 b\u0103\u0300ng\:
 infoImportScriptSuccess=Import script successfully.
+infoMariaDBGrpUnparsedChar=Thay th\u1EBF b\u1EB1ng giá tr\u1ECB m\u1EDBi cho ký t\u1EF1 mariadb 0x0000 trong Chu\u1ED7i
+infoMariaDBGrpUnparsedDate=Thay th\u1EBF b\u1EB1ng giá tr\u1ECB m\u1EDBi cho ngày mariadb không th\u1EC3 phân tích cú pháp(vi\u0301 du\u0323\: 0000-00-00)
+infoMariaDBGrpUnparsedTime=Thay th\u1EBF b\u1EB1ng giá tr\u1ECB m\u1EDBi cho ngày mariadb không th\u1EC3 phân tích cú pháp(vi\u0301 du\u0323\: -838\:59\:59)
+infoMariaDBGrpUnparsedTimestamp=Thay th\u1EBF b\u1EB1ng giá tr\u1ECB m\u1EDBi cho d\u1EA5u th\u1EDDi gian mariadb không th\u1EC3 phân tích cú pháp(vi\u0301 du\u0323\: 0000-00-00 00\:00\:00)
+informix2CUBRID=Informix \u0111\u00EA\u0301n CUBRID
 jdbcPatternTitle=JDBC URL
 labelGroupName=T\u00EAn nho\u0301m\:
 labelManagerGroups=Truy xu\u00E2\u0301t va\u0300 s\u0103\u0301p x\u00EA\u0301p nho\u0301m.
@@ -409,6 +418,7 @@ lblViewStatement=Statement\:
 lblXMLFileCharset=B\u00F4\u0323 ma\u0303 ky\u0301 t\u01B0\u0323 t\u00EA\u0323p tin XML\:
 lblXMLFilePath=\u0110\u01B0\u01A1\u0300ng d\u00E2\u0303n t\u00EA\u0323p tin XML\:
 lblXMLFileTimezone=Mu\u0301i gi\u01A1\u0300\:
+mariadbToCubrid=MariaDB \u0111\u00EA\u0301n CUBRID
 maxImportThreadCountPerTable=Import Thread Count Per Table\:
 maximizeWindowOnStartUp=Hi\u00EA\u0323n c\u01B0\u0309a s\u00F4\u0309 l\u01A1\u0301n nh\u00E2\u0301t
 menuDelete=&Delete
