--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
@@ -99,6 +99,10 @@ btnSrcMySQLDumpDB=\u672C\u5730MYSQL XML dump\u6587\u4EF6
 btnSrcMySQLDumpDBDes=\u7531'mysqldump --xml'\u547D\u4EE4\u5BFC\u51FA\u7684MySQL\u6570\u636E\u5E93\u6587\u4EF6.
 btnSrcOnlineCUBRIDDB=\u5728\u7EBFCUBRID\u6570\u636E\u5E93
 btnSrcOnlineCUBRIDDBDes=\u5728\u7EBFCUBRID\u6570\u636E\u5E93.
+btnSrcOnlineInformixDB=\u5728\u7DDA Informix \u6578\u64DA\u5EAB
+btnSrcOnlineInformixDBDes=\u901A\u904E JDBC \u9023\u63A5\u5230 Informix
+btnSrcOnlineMariaDBDB=\u5728\u7DDA MariaDB \u6578\u64DA\u5EAB
+btnSrcOnlineMariaDBDBDes=\u901A\u904E JDBC \u9023\u63A5\u5230 MariaDB
 btnSrcOnlineMSSQLDB=\u5728\u7EBFSQL Server\u6570\u636E\u5E93
 btnSrcOnlineMSSQLDBDes=\u5728\u7EBFSQL Server\u6570\u636E\u5E93.
 btnSrcOnlineMySQLDB=\u5728\u7EBFMySQL\u6570\u636E\u5E93
@@ -298,6 +302,11 @@ infoGrpUnparsedTimestamp0="1970-01-02 01\:00\:00.000"
 infoGrpUnparsedTimestampNull=NULL
 infoGrpUnparsedTimestampOther=\u66FF\u6362\u4E3A\:
 infoImportScriptSuccess=\u5BFC\u5165\u811A\u672C\u6210\u529F
+infoMariaDBGrpUnparsedChar=\u66FF\u63DB\u70BA\u5B57\u7B26\u4E32\u4E2D mariadb \u5B57\u7B26 0x0000 \u7684\u65B0\u503C
+infoMariaDBGrpUnparsedDate=\u66FF\u63DB\u70BA\u7121\u6CD5\u89E3\u6790\u7684 mariadb \u65E5\u671F\u7684\u65B0\u503C(\u6BD4\u5982\: 0000-00-00)
+infoMariaDBGrpUnparsedTime=\u66FF\u63DB\u70BA\u7121\u6CD5\u89E3\u6790\u7684 mariadb \u6642\u9593\u7684\u65B0\u503C(\u6BD4\u5982\: -838\:59\:59)
+infoMariaDBGrpUnparsedTimestamp=\u66FF\u63DB\u70BA\u7121\u6CD5\u89E3\u6790\u7684 mariadb \u6642\u9593\u6233\u7684\u65B0\u503C(\u6BD4\u5982\: 0000-00-00 00\:00\:00)
+informix2CUBRID=Informix\u5230CUBRID
 jdbcPatternTitle=JDBC URL
 labelGroupName=\u7EC4\u540D\:
 labelManagerGroups=\u9009\u62E9\u5E76\u6392\u5E8F\u7EC4.
@@ -409,6 +418,7 @@ lblViewStatement=SQL \u5B9A\u4E49\:
 lblXMLFileCharset=XML\u6587\u4EF6\u5B57\u7B26\u96C6(&R)\:
 lblXMLFilePath=XML\u6587\u4EF6\u8DEF\u5F84(&H)\:
 lblXMLFileTimezone=\u65F6\u533A(&Z)\:
+mariadbToCubrid=MariaDB \u0111\u00EA\u0301n CUBRID
 maxImportThreadCountPerTable=Import Thread Count Per Table\:
 maximizeWindowOnStartUp=\u6700\u5927\u5316\u7A97\u53E3(&H)
 menuDelete=\u5220\u9664(&D)
