add schema mapping page description

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -629,6 +629,7 @@ refreshDBConnActionMessage=Refresh database will retrieve database object and cl
 removeButtonLabel=&Remove
 schemaMappingPageTitle=Schema Mapping Page
 schemaMappingPageDescription=Mapping the schema
+schemaMappingPageDescriptionUncorrectable=Cannot modify target schema
 setOptionPageOKMsg=The migration script is saved successfully\!
 sourceDBPageErrNoSelectedItem=Please select a database connection in the list.
 sourceDBPageErrNoSelectedXMLFile=Please select a MySQL XML dump file.
