--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -614,6 +614,7 @@ refreshDBConnActionMessage=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC0C8\uB85C\uAC
 removeButtonLabel=\uC0AD\uC81C
 schemaMappingPageTitle=4 / 6 \uc2a4\ud0a4\ub9c8 \ub9f5\ud551
 schemaMappingPageDescription=\uB300\uC0C1 \uC2A4\uD0A4\uB9C8\uB97C \uC120\uD0DD\uD558\uAC70\uB098 \uBCC0\uACBD\uD574 \uC8FC\uC138\uC694
+schemaMappingPageDescriptionUncorrectable=\uB300\uC0C1 \uC2A4\uD0A4\uB9C8\uB97C \uC218\uC815\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4
 setOptionPageOKMsg=\uB9C8\uC774\uADF8\uB808\uC774\uC158 \uC2A4\uD06C\uB9BD\uD2B8 \uC800\uC7A5\uC774 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4\!
 sourceDBPageErrNoSelectedItem=\uBAA9\uB85D\uC5D0\uC11C \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC5F0\uACB0\uC744 \uC120\uD0DD\uD574 \uC8FC\uC2ED\uC2DC\uC624.
 sourceDBPageErrNoSelectedXMLFile=\uB370\uC774\uD130 \uC18C\uC2A4\uB85C xml \uD30C\uC77C\uC744 \uC120\uD0DD\uD574 \uC8FC\uC2ED\uC2DC\uC624.
