--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_tr_TR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_tr_TR.properties
@@ -598,6 +598,9 @@ progressMetadata=Veritaban\u0131 Meta veri al\u0131m\u0131 devam etmekte...
 refreshButtonLabel=Yenile(&F)
 refreshDBConnActionMessage=Yenileme veritaban\u0131na veritaban\u0131 nesnesi al\u0131r ve sihirbaz verilerini temizler,emin misiniz?
 removeButtonLabel=&Kald\u0131r
+schemaMappingPageTitle=\u015Eema E\u015Fleme Sayfas\u0131
+schemaMappingPageDescription=\u015Eemay\u0131 e\u015Fleme
+schemaMappingPageDescriptionUncorrectable=Hedef \u015Fema de\u011Fi\u015Ftirilemez
 setOptionPageOKMsg=TGe\u00E7i\u015F komutu ba\u015Far\u0131 ile kaydedildi\!
 sourceDBPageErrNoSelectedItem=Listeden bir veritaban\u0131 ba\u011Flant\u0131s\u0131 se\u00E7in
 sourceDBPageErrNoSelectedXMLFile=L\u00FCtfen bir xml dosyas\u0131 se\u00E7in veri kayna\u011F\u0131ndaki gibi.
