--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_zh_CN.properties
@@ -598,6 +598,9 @@ progressMetadata=\u83B7\u53D6\u6570\u636E\u5E93\u5143\u6570\u636E\u4E2D...
 refreshButtonLabel=\u5237\u65B0(&F)
 refreshDBConnActionMessage=\u5237\u65B0\u6570\u636E\u5E93\u5C06\u4F1A\u91CD\u65B0\u83B7\u53D6\u6570\u636E\u5E93\u5BF9\u8C61\u5E76\u6E05\u9664\u5411\u5BFC\u6570\u636E\uFF0C\u786E\u5B9A\u5417?
 removeButtonLabel=\u79FB\u9664(&R)
+schemaMappingPageTitle=\u67B6\u69CB\u6620\u5C04\u9801\u9762
+schemaMappingPageDescription=\u6620\u5C04\u6A21\u5F0F
+schemaMappingPageDescriptionUncorrectable=\u7121\u6CD5\u4FEE\u6539\u76EE\u6A19\u67B6\u69CB
 setOptionPageOKMsg=\u8FC1\u79FB\u811A\u672C\u4FDD\u5B58\u5B8C\u6210\!
 sourceDBPageErrNoSelectedItem=\u5728\u5217\u8868\u4E2D\u9009\u62E9\u4E00\u4E2A\u6570\u636E\u5E93\u8FDE\u63A5
 sourceDBPageErrNoSelectedXMLFile=\u8BF7\u9009\u62E9\u4E00\u4E2AXML\u6587\u4EF6\u4F5C\u4E3A\u6570\u636E\u6E90
