add synonym object to migration object mapping page

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -329,6 +329,7 @@ labelTreeObjPartition=Partitions
 labelTreeObjProcedure=Procedures
 labelTreeObjSerial=Serials
 labelTreeObjSql=SQLs
+labelTreeObjSynonym=Synonyms
 labelTreeObjTable=Tables
 labelTreeObjTrigger=Triggers
 labelTreeObjView=Views
@@ -410,6 +411,10 @@ lblSourceTalbeName=Source table name\:
 lblStartNow=Press [Start Now] to start migration now.
 lblStartTime=Start Time\:
 lblStartValue=Start Value\: 
+lblSynonymName=Synonym Name\:
+lblSynonymTargetObjectName=Target Object Name\:
+lblSyonymTargetOwnerName=Target Owner Name\:
+lblSyonymPublic=Public Synonym
 lblTableName=Table Name\: 
 lblTarget=Target
 lblTargetTableName=Target table name\:
@@ -489,6 +494,7 @@ msgErrDupColumnName=[Table\:"{0}"]Duplicated column name "{1}".
 msgErrDupFKName=[Table\:"{0}"]Duplicated foreign key name "{1}".
 msgErrDupIndexName=[Table\:"{0}"]Duplicated index name "{1}".
 msgErrDupSerialName=Serial name [{0}] is duplicated with other serials.
+msgErrDupSynonymName=Synonym name [{0}] is duplicated with other synonyms.
 msgErrDupViewName=View name [{0}] is duplicated with other DB object's name.
 msgErrDuplicatedScriptName=Duplicated migration script name.
 msgErrEmptyIncrement=Increment value can't be empty.
@@ -518,6 +524,7 @@ msgErrInvalidIndexName=[Table\:"{0}"]Invalid index name "{1}".
 msgErrInvalidMigrationHistory=Invalid migration history file.
 msgErrInvalidSerialName=Invalid serial name [{0}]
 msgErrInvalidSchemaName=Invalid schema name
+msgErrInvalidSynonymName=Invalid synonym name [{0}]
 msgErrInvalidTableName=Invalid table name [{0}].
 msgErrInvalidViewName=Invalid view name [{0}].
 msgErrMaxMin=Max value should be larger then min value.
@@ -612,6 +619,7 @@ objectMapPageTabFolderErrTableName=Source table "{0}" \: the target table name "
 objectMapPageTabFolderErrViewName=Source view "{0}" \: the target view name "{1}" is invalid.
 objectMapPageTabFolderSequences=Ser&ial
 objectMapPageTabFolderSqls=SQL
+objectMapPageTabFolderSynonyms=&Synonym
 objectMapPageTabFolderTables=&Table
 objectMapPageTabFolderViews=&View
 objectMapPageTitle=Database Object Mapping
@@ -666,6 +674,7 @@ tabTitleSourceColumn=Source Column
 tabTitleSourceFK=Source FK
 tabTitleSourceIndex=Source Index
 tabTitleSourceSerial=Source Serial
+tabTitleSourceSynonym=Source Synonym
 tabTitleSourceTable=Source Table
 tabTitleSourceTableDes=Table name in the source.
 tabTitleSourceView=Source View
@@ -673,6 +682,7 @@ tabTitleTargetColumn=Target Column
 tabTitleTargetFK=Target FK
 tabTitleTargetIndex=Target Index
 tabTitleTargetSerial=Target Serial
+tabTitleTargetSynonym=Target Synonym
 tabTitleTargetTable=Target Table
 tabTitleTargetTableDes=Table name in the destination.
 tabTitleTargetView=Target View
