fix bug for the same name synonym

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -412,6 +412,7 @@ lblStartNow=Press [Start Now] to start migration now.
 lblStartTime=Start Time\:
 lblStartValue=Start Value\: 
 lblSynonymName=Synonym Name\:
+lblSynonymOwnerName=Synonym Owner Name\:
 lblSynonymTargetObjectName=Target Object Name\:
 lblSyonymTargetOwnerName=Target Owner Name\:
 lblSyonymPublic=Public Synonym
