add synonym to confirmationpage

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -202,6 +202,7 @@ confrimData=Data \:
 confrimExportFKs=Export FKs \:
 confrimExportIndexs=Export Indexs \:
 confrimExportSerial=Export Serial \: 
+confrimExportSynonym=Export Synonym \:
 confrimExportTables=Export Tables \:
 confrimExportViews=Export Views \:
 confrimIndex=Index \:
@@ -212,6 +213,7 @@ confrimView=View \:
 confrimPk=PK \: 
 confrimFk=FK \: 
 confrimSerial=Serial \: 
+confrimSynonym=Synonym \:
 confrimUpdateStatistic=UpdateStatistic \: 
 cubridNewInfoEditorName=CUBRID Information
 dBConnectCompositeBtnBrowse=Bro&wse...
