fix messages properties

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -415,8 +415,8 @@ lblStartTime=Start Time\:
 lblStartValue=Start Value\: 
 lblSynonymName=Synonym Name\:
 lblSynonymOwnerName=Synonym Owner Name\:
-lblSynonymTargetObjectName=Target Object Name\:
-lblSynoymTargetOwnerName=Target Owner Name\:
+lblSynonymObjectName=Object Name\:
+lblSynonymObjectOwnerName=Object Owner Name\:
 lblTableName=Table Name\: 
 lblTarget=Target
 lblTargetTableName=Target table name\:
