--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -413,8 +413,8 @@ lblStartTime=\uC2DC\uC791 \uC2DC\uAC04\:
 lblStartValue=\uC2DC\uC791 \uAC12\:
 lblSynonymName=\uC2DC\uB178\uB2D8 \uC774\uB984\:
 lblSynonymOwnerName=\uC2DC\uB178\uB2D8 \uC2A4\uD0A4\uB9C8 \uC774\uB984\:
-lblSynonymTargetObjectName=\uB300\uC0C1 \uC624\uBE0C\uC81D\uD2B8 \uC774\uB984:
-lblSynonymTargetOwnerName=\uB300\uC0C1 \uC2A4\uD0A4\uB9C8 \uC774\uB984\:
+lblSynonymObjectName=\uC624\uBE0C\uC81D\uD2B8 \uC774\uB984:
+lblSynonymObjectOwnerName=\uC624\uBE0C\uC81D\uD2B8 \uC2A4\uD0A4\uB9C8 \uC774\uB984\:
 lblTableName=\uD14C\uC774\uBE14 \uC774\uB984\:
 lblTarget=\uB300\uC0C1
 lblTargetTableName=\uB300\uC0C1 \uD14C\uC774\uBE14 \uC774\uB984\:
