add error Message

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -253,6 +253,7 @@ errCannotOpenInternalBrowser=\uD604 \uC6B4\uC601\uCCB4\uC81C\uB294 \uBE0C\uB77C\
 errCascadeOnUpdateNotSupported={0} \uD14C\uC774\uBE14FK\uBA85 "{1}"\uC758  Cascade\uB294 CUBRID FK\uC758 Update \uB8F0\uC744 \uC9C0\uC6D0\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 errConnectDatabase=\uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC11C\uBC84\uB85C \uC811\uC18D\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 errDuplicateSequenceName=\uC2DC\uB9AC\uC5BC "{0}"\uAC00 \uC911\uBCF5\uB428.
+errDuplicateSynonymName=\uC2DC\uB178\uB2D8 "{0}"\uAC00 \uC911\uBCF5\uB428.
 errErrorFileNotFound=\uC800\uC7A5\uB41C \uC624\uB958 \uD30C\uC77C\uC774 \uC5C6\uC2B5\uB2C8\uB2E4.
 errInvalidChar=\uC785\uB825 \uBB38\uC790 "{0}"\uAC00 \uC720\uD6A8\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.\r\n\uB178\uD2B8 \: \uC720\uD6A8\uD55C \uBB38\uC790\uB294 "a, 'b', 0x20, 1"\uACFC \uAC19\uC2B5\uB2C8\uB2E4.
 errInvalidDate=\uC785\uB825\uD55C DATE "{0}"\uAC00 \uC720\uD6A8\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.\r\n\uB178\uD2B8 \: \uC720\uD6A8\uD55C DATE \uD615\uC2DD\uC740 "yyyy-MM-dd"\uACFC \uAC19\uC2B5\uB2C8\uB2E4.
