--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -254,6 +254,7 @@ errCannotOpenInternalBrowser=Since libraries for the web browser are not install
 errCascadeOnUpdateNotSupported=[Table\:"{0}"]FK name "{1}"\: CUBRID doesn't support cascade updating. 
 errConnectDatabase=Failed to connect database server
 errDuplicateSequenceName=The serial name "{0}" is duplicated.
+errDuplicateSynonymName=The synonym name "{0}" is duplicated.
 errErrorFileNotFound=Can't find the error files.
 errInvalidChar=Invalid input character\:{0}\t\tNote\: valid character can be like\: a, 'b', 0x20, 1
 errInvalidDate=Invalid input date string\:{0}\t\tNote\: valid date format\: yyyy-MM-dd
