--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -327,6 +327,7 @@ labelManagerGroups=Manage groups
 labelTreeObjColumn=Columns
 labelTreeObjFk=FKs
 labelTreeObjFunction=Functions
+labelTreeObjGrant=Grants
 labelTreeObjIndex=Indexes
 labelTreeObjPartition=Partitions
 labelTreeObjProcedure=Procedures
@@ -620,6 +621,7 @@ objectMapPageTabFolderBtnVerify1=Verify data type mapping
 objectMapPageTabFolderBtnVerify2=Verify all data type mapping
 objectMapPageTabFolderErrTableName=Source table "{0}" \: the target table name "{1}" is invalid.
 objectMapPageTabFolderErrViewName=Source view "{0}" \: the target view name "{1}" is invalid.
+objectMapPageTabFolderGrants=&Grant
 objectMapPageTabFolderSequences=Ser&ial
 objectMapPageTabFolderSqls=SQL
 objectMapPageTabFolderSynonyms=&Synonym
@@ -675,6 +677,7 @@ tabTitlePartitions=Partitions
 tabTitleSQL=SQL
 tabTitleSourceColumn=Source Column
 tabTitleSourceFK=Source FK
+tabTitleSourceGrant=Source Grant
 tabTitleSourceIndex=Source Index
 tabTitleSourceSerial=Source Serial
 tabTitleSourceSynonym=Source Synonym
@@ -683,6 +686,7 @@ tabTitleSourceTableDes=Table name in the source.
 tabTitleSourceView=Source View
 tabTitleTargetColumn=Target Column
 tabTitleTargetFK=Target FK
+tabTitleTargetGrant=Target Grant
 tabTitleTargetIndex=Target Index
 tabTitleTargetSerial=Target Serial
 tabTitleTargetSynonym=Target Synonym
