--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -368,7 +368,14 @@ lblFKColumnInfo=Columns\:
 lblFKName=Foreign &Key Name\:
 lblFKRefColumns=Reference Columns\: 
 lblFKRefTableName=Referenced Table Name\: 
-lblFileMaxSize=Max record count per file\: 
+lblFileMaxSize=Max record count per file\:
+lblGrantAuthType=Grant Auth Type\:
+lblGrantClassName=Grant Class Name\:
+lblGrantClassOwner=Grant Class Owner\:
+lblGrantGrantable=Grantable\:
+lblGrantGrantee=Grantee\:
+lblGrantGrantor=Grantor\:
+lblGrantName=Grant Name\:
 lblHDFSFile=File\:
 lblHDFSPath=Path\:
 lblHost=Host\:
@@ -668,6 +675,7 @@ tabTitleDataDes=Migrating table's data option.
 tabTitleDataSQLDes=Migrating SQL table's data option.
 tabTitleDataType=Data Type
 tabTitleFK=FK
+tabTitleGrantAuthType=Auth Type
 tabTitleGeneral=General
 tabTitleIndexes=Indexes
 tabTitleName=SQL ID
@@ -681,6 +689,8 @@ tabTitleSourceColumn=Source Column
 tabTitleSourceFK=Source FK
 tabTitleSourceGrant=Source Grant
 tabTitleSourceIndex=Source Index
+tabTitleSourceObject=Source Object
+tabTitleSourceOwner=Source Owner
 tabTitleSourceSerial=Source Serial
 tabTitleSourceSynonym=Source Synonym
 tabTitleSourceTable=Source Table
@@ -690,6 +700,7 @@ tabTitleTargetColumn=Target Column
 tabTitleTargetFK=Target FK
 tabTitleTargetGrant=Target Grant
 tabTitleTargetIndex=Target Index
+tabTitleTargetOwner=Target Owner
 tabTitleTargetSerial=Target Serial
 tabTitleTargetSynonym=Target Synonym
 tabTitleTargetTable=Target Table
