add korean messages properies

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -370,8 +370,8 @@ lblFKRefColumns=Reference Columns\:
 lblFKRefTableName=Referenced Table Name\: 
 lblFileMaxSize=Max record count per file\:
 lblGrantAuthType=Grant Auth Type\:
-lblGrantClassName=Grant Class Name\:
-lblGrantClassOwner=Grant Class Owner\:
+lblGrantClassName=Grant Object Name\:
+lblGrantClassOwner=Grant Object Owner\:
 lblGrantGrantable=Grantable\:
 lblGrantGrantee=Grantee\:
 lblGrantGrantor=Grantor\:
