add rename object offline dump file
enables the download of the rename object page
fix message properties chagedObject -> renamedObject

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -343,7 +343,7 @@ lblAddSQL=SQL \uCD94\uAC00(&A)
 lblAuthentication=\uC778\uC99D\:
 lblAutoIncrement=\uC790\uB3D9\uC99D\uBD84
 lblCacheNum=\uCE90\uC2DC \uAC12\:
-lblChangedObject=\uBCC0\uACBD\uB41C \uAC1D\uCCB4
+lblRenamedObject=\uBCC0\uACBD\uB41C \uAC1D\uCCB4
 lblChangeTargetTable=\uB300\uC0C1 \uD14C\uC774\uBE14 \uC774\uB984 \uBCC0\uACBD
 lblCharset=\uBB38\uC790\uC9D1\uD569\:
 lblClearAll=\uBAA8\uB4E0 \uC120\uD0DD \uCDE8\uC18C
