--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -345,7 +345,7 @@ lblAddSQL=&Add SQL
 lblAuthentication=Authentication\:
 lblAutoIncrement=Auto Increment
 lblCacheNum=Cache Number\:
-lblRenamedObject=Renamed Objects
+lblRenamedObject=Renamed objects
 lblChangeTargetTable=Change Target Table
 lblCharset=Charset\: 
 lblClearAll=Clear All Selected
