fix the select user schema button in migration wizard step 3 offline version
changed to radio button in check box
add 11.0 lower or 11.2 higher statements

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -40,6 +40,8 @@ btnCreateNewScript=New Script
 btnCreatePKFirst=Create PK before migrating data (require this option on HA databases)
 btnCronPatten=Advance(Unix cron pattern)
 btnCycle=C&ycle
+btnDB110Under=11.0 Under
+btnDB112Over=11.2 Over
 btnDefault=Default
 btnDefaultColumnLength=Default(1X)
 btnDefaultExpression=Expression
@@ -714,6 +716,7 @@ targetDBPageComboDefault=Default
 targetDBPageFileRepositoryLabel=File Repositor&y \:
 targetDBPageOfflineErrMsg2=Name can not be empty 
 targetDBPageOfflineTargetFileRepositoryErrMsg=Select file repository path
+targetDBVersion=DB Version\:
 targetPKColumns=Target PK Columns
 targetSchema=Target Schema
 targetSchemaDes=Target DB's Target Schema Name
