--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -13,6 +13,7 @@ auoCheckUpdate=Automatically &find new updates and notify me during application 
 btnAdd=&Add...
 btnAddFromHDFS=Add from HDFS
 btnAddUserSchema=Add User Schema
+btnCreateUserSQL=Create user SQL
 btnSplitSchema=Split schema file
 btnAdvanced=JDBC Advanced...
 btnAdvancedSettings=Advanced Settings...
