fix bug where grant was migration from version under 11.0

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -618,6 +618,7 @@ msgUserSchemaDisable=(user schema disable)
 msgWarnTableRecreated=The table "{0}" will be recreated. 
 msgWarning=Warning
 msgWarningImpossibleMigrationGrant=Grant migration is possible only if the targetDB access user is a DBA.
+msgWarningImpossibleMigrationSynonymGrant=Synonym and Grant support migration when targetDB is version 11.2 or higher.
 msgWizardStep=Step {0} of {1}\: 
 mysqlToCubrid=MySQL to CUBRID
 mariadbToCubrid=MariaDB to CUBRID
