--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -615,6 +615,7 @@ msgToggleExitConfirm=\uC885\uB8CC\uC2DC \uBB3B\uC9C0 \uC54A\uACE0 \uC885\uB8CC\u
 msgWarnTableRecreated=\uD14C\uC774\uBE14\uC774 \uC774\uBBF8 \uC874\uC7AC\uD558\uC5EC \uD14C\uC774\uBE14\uC744 \uC0AD\uC81C\uD6C4 \uC7AC \uC0DD\uC131\uD558\uAC8C \uB429\uB2C8\uB2E4\:"{0}".
 msgWarning=\uACBD\uACE0
 msgWarningImpossibleMigrationGrant=Grant \uB9C8\uC774\uADF8\uB808\uC774\uC158\uC740 \uB300\uC0C1 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uC811\uC18D \uC720\uC800\uB97C DBA\uB85C \uD574\uC57C \uAC00\uB2A5\uD569\uB2C8\uB2E4.
+msgWarningImpossibleMigrationSynonymGrant=Synonym, Grant\uB294 \uB300\uC0C1 \uB370\uC774\uD130\uBCA0\uC774\uC2A4 \uBC84\uC804\uC774 11.2 \uC774\uC0C1\uC778 \uACBD\uC6B0\uC5D0\uB9CC \uB9C8\uC774\uADF8\uB808\uC774\uC158\uC744 \uC9C0\uC6D0\uD569\uB2C8\uB2E4.
 msgWizardStep={0} / {1} \uB2E8\uACC4\:
 mysqlToCubrid=MySQL\uC5D0\uC11C CUBRID
 newButtonLabel=\uC2E0\uADDC
