--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -485,7 +485,10 @@ msgConfirmationTypeChanged=You have changed the migration type, some configurati
 msgConnectFailed=Connect failed.
 msgConnectSuccess=Connect successfully.
 msgConnectingHDFS=Fetching HDFS information......
+msgCubridCSV=CUBRID CSV
 msgCubridDump=CUBRID dump
+msgCubridSQL=CUBRID SQL
+msgCubridXLS=CUBRID XLS
 msgCubridHelpSiteUrl=https\://www.cubrid.org/tutorials/3827329
 msgCubridHomePageUrl=http\://www.cubrid.org
 msgCubridProjectSiteUrl=https\://github.com/CUBRID/cubrid
