change to CUBRID dump uppercase

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -485,7 +485,7 @@ msgConnectFailed=\uC5F0\uACB0\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 msgConnectSuccess=\uC5F0\uACB0\uD588\uC2B5\uB2C8\uB2E4.
 msgConnectingHDFS=HDFS \uC815\uBCF4 \uC870\uD68C\uC911...
 msgCubridCSV=CUBRID CSV
-msgCubridDump=CUBRID dump
+msgCubridDump=CUBRID DUMP
 msgCubridSQL=CUBRID SQL
 msgCubridXLS=CUBRID XLS
 msgCubridHelpSiteUrl=https\://www.cubrid.com/tutorial/3793913
