--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -486,7 +486,7 @@ msgConnectFailed=Connect failed.
 msgConnectSuccess=Connect successfully.
 msgConnectingHDFS=Fetching HDFS information......
 msgCubridCSV=CUBRID CSV
-msgCubridDump=CUBRID dump
+msgCubridDump=CUBRID DUMP
 msgCubridSQL=CUBRID SQL
 msgCubridXLS=CUBRID XLS
 msgCubridHelpSiteUrl=https\://www.cubrid.org/tutorials/3827329
