change DB Version to CUBRID Version

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -724,7 +724,7 @@ targetDBPageComboDefault=Default
 targetDBPageFileRepositoryLabel=File Repositor&y \:
 targetDBPageOfflineErrMsg2=Name can not be empty 
 targetDBPageOfflineTargetFileRepositoryErrMsg=Select file repository path
-targetDBVersion=DB Version\:
+targetDBVersion=CUBRID Version\:
 targetPKColumns=Target PK Columns
 targetSchema=Target Schema
 targetSchemaDes=Target DB's Target Schema Name
