--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -719,7 +719,7 @@ targetDBPageComboDefault=\uAE30\uBCF8\uAC12
 targetDBPageFileRepositoryLabel=\uD30C\uC77C \uACBD\uB85C \:
 targetDBPageOfflineErrMsg2=\uC774\uB984\uC744 \uC785\uB825\uD574 \uC8FC\uC138\uC694.
 targetDBPageOfflineTargetFileRepositoryErrMsg=\uD30C\uC77C\uB85C \uC800\uC7A5\uD560 \uACBD\uB85C\uB97C \uC120\uD0DD\uD558\uC138\uC694.
-targetDBVersion=DB \uBC84\uC804\:
+targetDBVersion=CUBRID \uBC84\uC804\:
 targetPKColumns=\uB300\uC0C1 PK \uCEEC\uB7FC
 targetSchema=\ub300\uc0c1 \uc2a4\ud0a4\ub9c8
 targetSchemaDes=\uc774\uad00\ub420 \ub300\uc0c1 \u0044\u0042\uc758 \uc2a4\ud0a4\ub9c8 \uc774\ub984\uc785\ub2c8\ub2e4\u002e
