Add directory verification code to save output file

--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages.properties
@@ -301,6 +301,7 @@ errOtherMigrationRunning=Other migration is running now.
 errSequenceName=The serial name "{0}" is invalid.
 failedLogDialogSaveErrMsg=Save Failed, reason\:
 fileWarningMessage=The following files already exist,they will be replaced
+fileRepositoryEmptyWarning=There are already other files in the path where you want to save the output file.\nDo you want to continue?
 groupNameExisted=Group name existed.
 groupNameInvalid=Invalid group name.
 grpExportingOpt=Exporting Optimization
