--- a/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
+++ b/com.cubrid.cubridmigration.ui/src/com/cubrid/cubridmigration/ui/message/Messages_ko_KR.properties
@@ -298,6 +298,7 @@ errOtherMigrationRunning=\uD604\uC7AC \uB9C8\uC774\uADF8\uB808\uC774\uC158\uC774
 errSequenceName=\uC2DC\uB9AC\uC5BC\uBA85 "{0}"\uC774 \uC801\uC808\uD558\uC9C0 \uC54A\uC2B5\uB2C8\uB2E4.
 failedLogDialogSaveErrMsg=\uC800\uC7A5 \uC2E4\uD328. \uC6D0\uC778\:
 fileWarningMessage=\uC544\uB798 \uD30C\uC77C\uB4E4\uC740 \uC774\uBBF8 \uC788\uC73C\uBBC0\uB85C \uB36E\uC5B4\uC4F0\uAE30\uAC00 \uB429\uB2C8\uB2E4.
+fileRepositoryEmptyWarning=\uCD9C\uB825 \uD30C\uC77C\uC744 \uC800\uC7A5\uD560 \uACBD\uB85C\uC5D0 \uC774\uBBF8 \uB2E4\uB978 \uD30C\uC77C\uB4E4\uC774 \uC788\uC2B5\uB2C8\uB2E4.\n\uACC4\uC18D \uC9C4\uD589\uD558\uC2DC\uACA0\uC2B5\uB2C8\uAE4C?
 groupNameExisted=\uADF8\uB8F9 \uC774\uB984\uC774 \uC774\uBBF8 \uC874\uC7AC\uD569\uB2C8\uB2E4.
 groupNameInvalid=\uADF8\uB8F9 \uC774\uB984\uC740 \uACF5\uBC31 \uB610\uB294 50\uC790 \uC774\uC0C1\uC758 \uBB38\uC790\uB294 \uC0AC\uC6A9\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
 grpExportingOpt=\uB0B4\uBCF4\uB0B4\uAE30 \uCD5C\uC801\uD654
